# Kivy_Python_C_Extension_Demo

./: .gitignore  LICENSE  README.md  buildozer.spec  main.py
custom_lib/: setup.cfg  setup.py
custom_lib/custom_lib/: custom_module.c
docs/: conf.py  index.rst  kivy.rst  requirements.txt
python-for-android/recipe/custom_lib/: __init__.py
