[metadata]
name = custom_lib
version = 1.0.0
description = This package contains some sample hello world C code
url = https://github.com/VICTORVICKIE/Kivy_Python_C_Extension_Demo
author = VIGNESH KUMAR S
author_email = s.vickie14@gmail.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    custom-lib-cli = custom_lib.custom_module:custom_hello
